...
            android:padding="16dp">

            <TextView
                android:id="@+id/screenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Collectors"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="Main screen title: Collectors"
                android:paddingEnd="16dp" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:queryHint="Search"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCollectors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
