...
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFavoritePerformers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <!-- Collector Albums Section -->
            <TextView
...
                android:text="Collector Albums"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCollectorAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>
</layout>
