<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewAlbum"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/album_image" />

    <TextView
        android:id="@+id/textViewAlbumName"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Album Name"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewAlbumYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Album Year"
        android:textSize="10sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="2dp" />

</LinearLayout>